2009-06-22  Paul Hilfinger  <hilfingr@tully.CS.Berkeley.EDU>

	* src/ucb/gjdb/Commands.java (clearPreviousStep): Clean up.
	(commandStep): Improve comment.
	(commandMethods): Clean up.
	(printThreadGroup, commandCommand, commandByteCodes): 
	StringBuffer => StringBuilder.
	
	* src/ucb/gjdb/Commands.java: Remove potential format insertions 
	in calls to notice, noticeln, error, errorln.
	* src/ucb/gjdb/VMConnection.java: Ditto.
	* src/ucb/gjdb/PatternReferenceTypeSpec.java: Ditto.
	* src/ucb/gjdb/EventHandler.java: Ditto.
	* src/ucb/gjdb/Env.java: Ditto.
	* src/ucb/gjdb/EventRequestSpecList.java: Ditto.
	* src/ucb/gjdb/GJDB.java: Ditto.
	* src/ucb/gjdb/CommandParser.y: Ditto.
	
2009-06-21  Paul Hilfinger  <hilfingr@tully.CS.Berkeley.EDU>

	* Update NEWS.
	
	* src/ucb/gjdb/VMConnection.java: Move value history here:
	(clearHistory, saveValue, retrieveHistory, getSaveKeys, preserve):
	New functions.
	* src/ucb/gjdb/Env.java: Remove value history from here:
	(getSaveKeys, getSavedValue, setSavedValue): Remove.
	(historyRetention): New parameter.
	* src/ucb/gjdb/Commands.java (doPrint): Keep value history.
	(doSave): Check for connectedness. 
	Use VMConnection.saveValue.
	(commandSave): Check for connectedness.
	Use VMConnection.retrieveHistory.
	* src/ucb/gjdb/CommandParser.y: Check for connection in 'save'
	commands.
	Add "set history <n>"
	* src/ucb/gjdb/CommandLexer.jf: Add "history" keyword.
	* usr/ucb/gjdb/GJDB.java (helpMsgs): Document "set history <n>".
	* src/ucb/gjdb/ExpressionParser.y: For INTERNALVAR, use
	VMConnection.retrieveHistory.
	Add HISTORYVAR.
	* src/ucb/gjdb/ExpressionLexer.jf: Add HISTORYVAR.
	

	* lib/emacs/lisp/gjdb.el: Change string-to-int => string-to-number.

	* Makefile.in (VERSION): Bump to 6.2.0.
	
	* src/ucb/gjdb/Env.java (description): Use standard Java 
	string-formatting methods.
	(toHex,fromHex): Remove unused methods.

2008-12-10  Paul Hilfinger  <hilfingr@tully.CS.Berkeley.EDU>

	* Makefile.in (VERSION): Bump to 6.1.2.
	